--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
                     text-align:center;
                     padding:20px;
                     box-sizing:border-box;
-                    width: 100vw;
+                    width: 100%;
                     height: 70vh;
                 }
 
